Fix wrapping of form elements

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   font-family: 'Libre Franklin', sans-serif;
-  font-size: calc(var(--font-base) * 1px);
   font-weight: 500;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
